# greta-ai-data-analysis

./: .gitignore  0.10.0  ADVANCED_DATA_CONNECTIVITY_SPEC.md  FEATURE_CHECKLIST.md  GRETA_CLI_ARCHITECTURE.md  GRETA_CORE_ARCHITECTURE.md  GRETA_WEB_APP_ARCHITECTURE.md  README.md  ROADMAP.md  SCALABILITY_FEATURE_SPEC.md  config.yml  generate_pdf_report.py  pyproject.toml  setup.py  wine_config.yml
greta_cli/: __init__.py  __main__.py
greta_cli/cli/: __init__.py  main.py
greta_cli/config/: __init__.py  config.py
greta_cli/core_integration/: __init__.py  integration.py
greta_cli/job_management/: __init__.py  job_manager.py  models.py  tasks.py
greta_cli/output/: __init__.py  reporting.py
greta_core/: __init__.py  causal_narratives.py  data_profiling.py  feature_engineering.py  hypothesis_search.py  ingestion.py  missing_value_handling.py  narrative_generation.py  preprocessing.py  regression_analysis.py  regression_narratives.py  scalability_errors.py  significance_tests.py  statistical_analysis.py  summary_narratives.py  time_series_analysis.py  time_series_narratives.py
greta_core/automl/: __init__.py  automl_pipeline.py  bayesian_models.py  evaluation.py  hyperparameter_tuning.py  model_registry.py  models.py  pipeline.py  registry.py  time_series_models.py  tuning.py  unsupervised_models.py
greta_core/automl/models/: __init__.py  base.py  bayesian.py  supervised.py  time_series.py  unsupervised.py
greta_core/hypothesis_search/: __init__.py  chromosome_utils.py  data_prep_utils.py  ensemble_feature_selection.py  evaluation_utils.py  generate_hypotheses.py  importance_utils.py  optimizers.py
greta_core/ingestion/: __init__.py  spark_connector.py
greta_core/ingestion/connectors/: __init__.py  api.py  base.py  mongodb.py  postgres.py  registry.py  s3.py
greta_core/narratives/: __init__.py  causal_narratives.py  regression_narratives.py  summary_narratives.py  time_series_narratives.py
greta_core/plugins/: __init__.py  base.py  config.py  discovery.py  interfaces.py  loader.py
greta_core/preprocessing/: __init__.py  automated_feature_generation.py  data_normalization.py  feature_engineering.py  feature_selection.py  importance_analysis.py  outlier_detection.py  profiling_stats.py
greta_core/statistical_analysis/: __init__.py  causal_analysis.py  regression_analysis.py
greta_core/statistical_analysis/tests/: __init__.py  hypothesis_evaluation.py  nonparametric_tests.py  parametric_tests.py  significance_tests.py
greta_web/: app.py  auth.py  database.py  greta.db
greta_web/pages/: analysis.py  data_health.py  data_upload.py  login.py  project_management.py  register.py  results.py  welcome.py
plans/: AutoML_Architecture_Spec.md
tests/: conftest.py  test_automl.py  test_causal_analysis.py  test_cli.py  test_connectors.py  test_enhanced_feature_engineering.py  test_enhanced_feature_selection_pipeline.py  test_hypothesis_search.py  test_ingestion.py  test_narrative_generation.py  test_preprocessing.py  test_statistical_analysis.py  test_web_app.py
