[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greta-cli"
version = "0.1.0"
description = "Command-line interface for automated data analysis using genetic algorithms"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "scikit-optimize>=0.9.0",
    "deap>=1.3.0",
    "statsmodels>=0.13.0",
    "tqdm>=4.0.0",
    "fpdf>=1.7.0",
    "reportlab>=4.0.0",
    "matplotlib>=3.5.0",
    "dask>=2022.0.0",
    "dask[dataframe]>=2022.0.0",
    "dowhy>=0.10.0",
    "pyswarms>=1.3.0",
    "pyspark>=3.3.0",
    "celery>=5.3.0",
    "redis>=4.5.0",
    "flower>=2.0.0",
    # Machine Learning - AutoML
    "tensorflow>=2.10.0",
    "xgboost>=1.7.0",
    "lightgbm>=3.3.0",
    "prophet>=1.1.0",
    "pymc>=5.0.0",
    "arviz>=0.12.0",
    "optuna>=3.0.0",
    "mlflow>=2.0.0",
    # Database connectors
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.0.0",
    "pyodbc>=4.0.0",
    "pymongo>=4.0.0",
    "cassandra-driver>=3.25.0",
    # Cloud connectors
    "boto3>=1.26.0",
    "google-cloud-storage>=2.7.0",
    "azure-storage-blob>=12.14.0",
    "azure-identity>=1.12.0",
    # API connectors
    "requests>=2.28.0",
    "httpx>=0.24.0",
    "gql>=3.4.0",
    # Security and utilities
    "cryptography>=39.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/greta-cli"
Repository = "https://github.com/your-org/greta-cli"
Issues = "https://github.com/your-org/greta-cli/issues"

[project.scripts]
greta = "greta_cli.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["greta_cli*", "greta_core*"]

[tool.setuptools.package-data]
greta_cli = ["*.yml", "*.yaml"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true